# ssactivewear-sdk

./: .pre-commit-config.yaml  README.md  noxfile.py  pylock.toml  pyproject.toml  requirements.txt
.github/workflows/: dependency-review.yaml  docs.yaml  python-ci.yaml  python-publish-pypi.yaml
docs/source/: conf.py  index.rst
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt
src/ssactivewear_sdk/: __init__.py  client.py  exceptions.py
src/ssactivewear_sdk/models/: __init__.py  _base.py  errors.py  orders.py  products.py
tests/: test_client.py
