[project]
name = "idi-ssactivewear-sdk"
version = "0.2.0"
description = "A wrapper for S&S' API."
readme = "README.md"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@impressdesigns.com" },
]
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.4",
]

[project.urls]
repository = "https://github.com/impressdesigns/ssactivewear-sdk"
documentation = "http://impressdesigns.dev/ssactivewear-sdk/"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # DX
    "nox>=2024.4.15",
    "pre-commit>=3.7.1",
    # Linters
    "ruff>=0.5.2",
    "mypy>=1.10.1",
]
docs = [
    "sphinx>=7.4.4",
    # Theme
    "furo>=2024.5.6",
    # Extensions
    "sphinx-autoapi>=3.1.2",
]
tests = [
    "coverage>=7.6.1",
    "pytest>=9.0.0",
    # Extensions
    "pytest-randomly>=3.15.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.build-backend]
module-name = "ssactivewear_sdk"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001",  # (Missing copyright notice at top of file) - No license
    "TC",      # (flake8-type-checking) - Pydantic uses runtime type checking
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101",   # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.isort]
known-first-party = ["ssactivewear_sdk"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.coverage.run]
branch = true
source_pkgs = ["ssactivewear_sdk"]
source_dirs = ["tests"]

[tool.pytest]
strict = true
junit_family = "legacy"
